# ChangeLog for media-libs/libtheora
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libtheora/ChangeLog,v 1.3 2004/03/18 10:10:11 phosphan Exp $

  18 Mar 2004; Patrick Kursawe <phosphan@gentoo.org>
  libtheora-1.0_alpha2.ebuild:
  Added another SRC_URI because of bug #44758

  25 Feb 2004; David Holm <dholm@gentoo.org> libtheora-1.0_alpha2.ebuild:
  Added to ~ppc.

*libtheora-1.0_alpha2 (24 Feb 2004)

  24 Feb 2004; Martin Holzer <mholzer@gentoo.org> libtheora-1.0_alpha2.ebuild:
  Initial ebuild. Submitted by MATSUU Takuto <matsuu@gentoo.org> in 41383
