@@ -1,4 +1,6 @@
-MD5 0f846336020a9e3ee2fedafa6390fe92 libtheora-1.0_alpha2.ebuild 751
-MD5 72f46255af806c43d834adfac2b9569b ChangeLog 638
 MD5 9ef4af14dad87b03fde8e43f19e08d26 metadata.xml 225
+MD5 ddbf44f744292b48d62852dec6752338 ChangeLog 808
+MD5 1f3552dd8a796e3a28cbcc0e07c5111b libtheora-1.0_alpha2-r1.ebuild 841
+MD5 0f846336020a9e3ee2fedafa6390fe92 libtheora-1.0_alpha2.ebuild 751
 MD5 43363432588af784deac91552ac3a636 files/digest-libtheora-1.0_alpha2 71
+MD5 43363432588af784deac91552ac3a636 files/digest-libtheora-1.0_alpha2-r1 71
