@@ -1,9 +1,9 @@
-MD5 027ce39844c77f65d81d6ea65e6a3781 ChangeLog 17552
+MD5 6abcc53a76cabe8e26dc230f57f48c1f ChangeLog 17682
 MD5 dffd46174e78b327c834fc3e4b1cf848 metadata.xml 160
 MD5 74eefa329c52e465c889ab8d509843bc xine-lib-0.9.13-r3.ebuild 3461
 MD5 2d8af992b607144689ef99e1482005cd xine-lib-1_rc2.ebuild 4038
 MD5 13eec76b0a026a7a210c914bebb5bbd1 xine-lib-1_rc3-r1.ebuild 4126
-MD5 90da5058eb6a2d633fc07fa9c0bad659 xine-lib-1_rc3-r2.ebuild 3977
+MD5 20f01d5c9faedbbe17d29a5abc9e2adc xine-lib-1_rc3-r2.ebuild 3977
 MD5 f1570a69c99207f65b5cdf1d154bbcd4 files/digest-xine-lib-0.9.13-r3 68
 MD5 f90bfe4a0ee80eecb38fc34022ccab7e files/digest-xine-lib-1_rc2 67
 MD5 e9819170d90442f5072d18dda93a8f5c files/digest-xine-lib-1_rc3-r1 68
