@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libtheora
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libtheora/ChangeLog,v 1.3 2004/03/18 10:10:11 phosphan Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libtheora/ChangeLog,v 1.4 2004/03/21 21:16:10 mholzer Exp $
+
+*libtheora-1.0_alpha2-r1 (21 Mar 2004)
+
+  21 Mar 2004; Martin Holzer <mholzer@gentoo.org>
+  libtheora-1.0_alpha2-r1.ebuild:
+  should fix problems with build and install.
 
   18 Mar 2004; Patrick Kursawe <phosphan@gentoo.org>
   libtheora-1.0_alpha2.ebuild:
